# glyphtex

./: .gitattributes  .gitmodules  AGENTS.md  CONTRIBUTING.md  DESIGN.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/ISSUE_TEMPLATE/: bug_report.yml  compile_issue.yml  config.yml  crash_report.yml  feature_request.yml  performance_issue.yml  ux_ui_issue.yml
.github/workflows/: ci-desktop.yml  deploy-web.yml  refresh-texlive-bundle.yml  release-desktop.yml  tex-engine.yml
apps/desktop/: package.json
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/src/: compile.rs  engine.rs  fsx.rs  git.rs  lib.rs  main.rs  project.rs  shell_integration.rs
apps/desktop/src/lib/: compile.ts  engine.ts  git.ts  launch.ts  prefetch.ts  project.ts  runtime.ts  save.ts  tauri-theme.ts  updater-card.svelte  updater.svelte.ts
apps/desktop/src/lib/workspace/: ProjectsPage.svelte
apps/desktop/src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css
apps/desktop/src/routes/(scopes)/: +layout.svelte
apps/desktop/src/routes/settings/: +layout.svelte
apps/web/: .env.example  .gitignore  eslint.config.js  package.json  vite.config.ts  wrangler.jsonc
apps/web/docs/: self-host-texlive.md
apps/web/scripts/: sync-engine.mjs
apps/web/src/: app.html  service-worker.ts
apps/web/src/lib/: EngineInstallDialog.svelte  EngineNotices.svelte  FloatingGlyphs.svelte  MainFileDialog.svelte  SiteFooter.svelte  SiteHeader.svelte  StoragePanel.svelte  WorkspaceBar.svelte  citations.ts  compile.ts  engine-packages.ts
apps/web/src/lib/analytics/: ga.ts  index.ts  types.ts
apps/web/src/lib/git/: diff.ts  fs.ts  index.ts  mirror.ts  provider.ts  settings.ts  status.ts
apps/web/src/lib/landing/: BeforeAfterSlider.svelte  Container.svelte  ContainerTextFlip.svelte  EditorMock.svelte  HeroBackdrop.svelte  MacWindow.svelte  PolishGrid.svelte  Section.svelte  ShowcasePanel.svelte  index.ts  nav-data.ts
apps/web/src/lib/storage/: bridge.ts  db.ts  entry.ts  ignore.ts  import.ts  projects.ts  quota.ts  template.ts  zip.ts
apps/web/src/lib/tex/: manifest.ts  mount.ts  packs.ts  protocol.ts  tar.ts  worker.ts
apps/web/src/lib/workspace/: WorkspaceHome.svelte
apps/web/src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css
apps/web/src/routes/download/: +page.svelte
apps/web/static/: site.webmanifest
apps/web/test/: citations.test.mjs  entry.test.mjs  git-diff.test.mjs  git-status.test.mjs  ignore.test.mjs  import.test.mjs  mount.test.mjs  storage.test.mjs  tar.test.mjs  zip.test.mjs
crates/glyphtex-tex-api/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/glyphtex-tex-api/src/: lib.rs  logparse.rs
crates/glyphx-tex-api/: Cargo.toml
crates/glyphx-tex-api/src/: api.rs  lib.rs  logparse.rs
crates/tectonic-wasm/: .gitattributes  .gitignore  BACKLOG.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
crates/tectonic-wasm/output/: tectonic_wasm.wasm
crates/tectonic-wasm/output/packs/: packs-index.json
crates/tectonic-wasm/scripts/: build-wasm.sh  check-size-budget.sh
crates/tectonic-wasm/src/: io.rs  lib.rs  main.rs  session.rs
scripts/dev/: capture-texlive-base.mjs  fetch-texlive-base.mjs  setup-tectonic.mjs
scripts/release/: generate-latest-json.sh  install-linux-deps.sh  rename-macos-updater-bundle.sh
(+18 files in other folders)
